--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-browser-reload==1.8.0
 django-tailwind==3.5.0
 gunicorn==20.1.0
 idna==3.3
+psycopg2-binary==2.9.3
 pytz==2022.2.1
 requests==2.28.1
 six==1.16.0
